stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__runtime_tests__arithmetic_pow_large_cdeploy.snap
---
source: stackslib/src/chainstate/tests/runtime_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "55780da24a8d19a3c070b907a662343e086b62f237cfd58f8946cc9b79ca3a5a",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: pow-large-deploy-Epoch3_4-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(Arithmetic(\"Power argument to (pow ...) must be a u32 integer\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 54,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9616,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 54,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9616,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "a2a74ba3dac31105d25684726fa8ea708e0f321146e00809ce442222f468dbf7",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: pow-large-deploy-Epoch3_4-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(Arithmetic(\"Power argument to (pow ...) must be a u32 integer\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 54,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9616,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 54,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9616,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "6ee83a7afcd39199f27801656c8df4ccaea364d3fc8ebe72bde8457416600216",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: pow-large-deploy-Epoch3_4-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(Arithmetic(\"Power argument to (pow ...) must be a u32 integer\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 54,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9616,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 54,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9616,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "42520e15fcd7e0f848c332b1082b3bbada7772ce4bb8b54223a919277a28e4f8",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: pow-large-deploy-Epoch3_4-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(Arithmetic(\"Power argument to (pow ...) must be a u32 integer\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 54,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9616,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 54,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9616,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "54fd4947ae3fa8e4d47d57c2deebacea37538b411a44d0a473c00bdd57e1d37c",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: pow-large-deploy-Epoch3_4-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(Arithmetic(\"Power argument to (pow ...) must be a u32 integer\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 54,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9616,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 54,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9616,
    ),
  )),
]
