stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__runtime_tests__arithmetic_pow_neg_cdeploy.snap
---
source: stackslib/src/chainstate/tests/runtime_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "b26cc6c5490b41ef3ca8efb030440e1d81c218c81bc33b5dc17da334befeea6e",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: pow-neg-deploy-Epoch3_4-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(Arithmetic(\"Power argument to (pow ...) must be a u32 integer\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 51,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9707,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 51,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9707,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "178e913bc4c7ee334eaa93ce0047ba8cb587eef3a7193c96e9730117ed9a4456",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: pow-neg-deploy-Epoch3_4-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(Arithmetic(\"Power argument to (pow ...) must be a u32 integer\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 51,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9707,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 51,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9707,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "0a82037de82ca4883855b582119f61b0ff9a7518ae867e0302f1cc7d40af9635",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: pow-neg-deploy-Epoch3_4-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(Arithmetic(\"Power argument to (pow ...) must be a u32 integer\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 51,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9707,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 51,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9707,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "8b4c09ec06fb60aa27e34824d5d0a0246940fafd969d912471cce7be2d3d9b9a",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: pow-neg-deploy-Epoch3_4-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(Arithmetic(\"Power argument to (pow ...) must be a u32 integer\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 51,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9707,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 51,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9707,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "2bd503bc95b32d0fdc72150695909be7d77f3c13d43871d722ce1c8e3f74af67",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: pow-neg-deploy-Epoch3_4-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(Arithmetic(\"Power argument to (pow ...) must be a u32 integer\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 51,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9707,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 51,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9707,
    ),
  )),
]
