stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__runtime_tests__arithmetic_sqrti_neg_cdeploy.snap
---
source: stackslib/src/chainstate/tests/runtime_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "cb0d05d274d0fb57912cb06163c905298246c6c2ad0d27980588cec4983576d0",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: sqrti-neg-deploy-Epoch4_0-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(Arithmetic(\"sqrti must be passed a positive integer\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 45,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9184,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 45,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9184,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "2f87119d98ca49b216d0dfff3cce63b797e1d0f306a391a71de7880bf27dd7db",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: sqrti-neg-deploy-Epoch4_0-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(Arithmetic(\"sqrti must be passed a positive integer\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 45,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9184,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 45,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9184,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "fbe071da9149fe3badef19d33028caac24876456b0e3740d3b05fbf993cacb15",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: sqrti-neg-deploy-Epoch4_0-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(Arithmetic(\"sqrti must be passed a positive integer\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 45,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9184,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 45,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9184,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "73c4c0a272aa76f3d863e88b312316e902c8f98ab8e2452e1d3767f2d0c06213",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: sqrti-neg-deploy-Epoch4_0-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(Arithmetic(\"sqrti must be passed a positive integer\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 45,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9184,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 45,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9184,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "3e10a73ee4d8f4cd2d7006d94f0b4610bca94d9909fca38b6c7828501ed71f0c",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: sqrti-neg-deploy-Epoch4_0-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(Arithmetic(\"sqrti must be passed a positive integer\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 45,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9184,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 45,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9184,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "2e46cd386821b2b316ac556d712c385cae96baae05bdd523c9b4f90840149cc8",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: sqrti-neg-deploy-Epoch4_0-Clarity6, code_body: [..], clarity_version: Some(Clarity6))",
        vm_error: "Some(Arithmetic(\"sqrti must be passed a positive integer\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 45,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 9184,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 45,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 9184,
    ),
  )),
]
