stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__runtime_tests__arithmetic_zero_n_log_n_cdeploy.snap
---
source: stackslib/src/chainstate/tests/runtime_tests.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "45e7a19a0ca4903dfa9a9e7af9140c915982825996f2dbec02b25ef951fbfab7",
    evaluated_epoch: Epoch21,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: zero-n-log-n-deploy-Epoch2_1-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(CostComputationFailed(\"Error evaluating result of cost function ST000000000000000000002AMW42H.costs-3.cost_from_consensus_buff: Arithmetic(\\\"log2 must be passed a positive integer\\\")\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 65,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10231,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 65,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10231,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "fb74cabf518c01f48e924015c111d210e859f70de2d6e327cd2f54b56f2609b9",
    evaluated_epoch: Epoch22,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: zero-n-log-n-deploy-Epoch2_2-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(CostComputationFailed(\"Error evaluating result of cost function ST000000000000000000002AMW42H.costs-3.cost_from_consensus_buff: Arithmetic(\\\"log2 must be passed a positive integer\\\")\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 65,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10231,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 65,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10231,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "ed66f07a7ffdf0272ffeb45ff62a0dac37c402bb60acc36e182aabd56dba24a7",
    evaluated_epoch: Epoch23,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: zero-n-log-n-deploy-Epoch2_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(CostComputationFailed(\"Error evaluating result of cost function ST000000000000000000002AMW42H.costs-3.cost_from_consensus_buff: Arithmetic(\\\"log2 must be passed a positive integer\\\")\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 65,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10231,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 65,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10231,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "4f497709d0b17e23f07b2322295f8d1ae3fe6e4de1c522c286d7a54dfe20020c",
    evaluated_epoch: Epoch24,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: zero-n-log-n-deploy-Epoch2_4-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(CostComputationFailed(\"Error evaluating result of cost function ST000000000000000000002AMW42H.costs-3.cost_from_consensus_buff: Arithmetic(\\\"log2 must be passed a positive integer\\\")\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 65,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10231,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 65,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10231,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "a2d29fad3fc858cd74168c09534c25b03c8aaccb6185f65190e6031e033880e0",
    evaluated_epoch: Epoch25,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: zero-n-log-n-deploy-Epoch2_5-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(CostComputationFailed(\"Error evaluating result of cost function ST000000000000000000002AMW42H.costs-3.cost_from_consensus_buff: Arithmetic(\\\"log2 must be passed a positive integer\\\")\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 65,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10231,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 65,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10231,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "8ce716e97696724a45e00b8fb63fb5a91e4b4047ba1ee84873f6dfde72a23951",
    evaluated_epoch: Epoch30,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: zero-n-log-n-deploy-Epoch3_0-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(CostComputationFailed(\"Error evaluating result of cost function ST000000000000000000002AMW42H.costs-3.cost_from_consensus_buff: Arithmetic(\\\"log2 must be passed a positive integer\\\")\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 65,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10231,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 65,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10231,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "3cba9afc4def2f23eb227a6946528861e7e6e2c8c182ec2f310d215f5bf4d66a",
    evaluated_epoch: Epoch30,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: zero-n-log-n-deploy-Epoch3_0-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(CostComputationFailed(\"Error evaluating result of cost function ST000000000000000000002AMW42H.costs-3.cost_from_consensus_buff: Arithmetic(\\\"log2 must be passed a positive integer\\\")\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 65,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10231,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 65,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10231,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "91bf9f9b71e0c82b58db758a9c5a76ab9d8fb87fe1ce28ed6682a88a6237cadb",
    evaluated_epoch: Epoch31,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: zero-n-log-n-deploy-Epoch3_1-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(CostComputationFailed(\"Error evaluating result of cost function ST000000000000000000002AMW42H.costs-3.cost_from_consensus_buff: Arithmetic(\\\"log2 must be passed a positive integer\\\")\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 65,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10231,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 65,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10231,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "389eeb6ff842a1c4be40531e3a99de24f6c2e796b6c80648fc986c1cb5f66b6a",
    evaluated_epoch: Epoch31,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: zero-n-log-n-deploy-Epoch3_1-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(CostComputationFailed(\"Error evaluating result of cost function ST000000000000000000002AMW42H.costs-3.cost_from_consensus_buff: Arithmetic(\\\"log2 must be passed a positive integer\\\")\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 65,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10231,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 65,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10231,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "28882ff418110117b998c93f8b4e7799d27d8101cb6a7711225f8d05e70caf6a",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: zero-n-log-n-deploy-Epoch3_2-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(CostComputationFailed(\"Error evaluating result of cost function ST000000000000000000002AMW42H.costs-3.cost_from_consensus_buff: Arithmetic(\\\"log2 must be passed a positive integer\\\")\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 65,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10231,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 65,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10231,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "e814268312b652f8618e968f80a42d6d793dc6e4dd815a813259fc495010d821",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: zero-n-log-n-deploy-Epoch3_2-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(CostComputationFailed(\"Error evaluating result of cost function ST000000000000000000002AMW42H.costs-3.cost_from_consensus_buff: Arithmetic(\\\"log2 must be passed a positive integer\\\")\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 65,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10231,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 65,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10231,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "25a01eb15034ef4ab666a7f54a12cf0eca70e3f314de94eb195cc6277d4afdc6",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: zero-n-log-n-deploy-Epoch3_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(CostComputationFailed(\"Error evaluating result of cost function ST000000000000000000002AMW42H.costs-4.cost_from_consensus_buff: Arithmetic(\\\"log2 must be passed a positive integer\\\")\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 65,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10231,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 65,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10231,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "e12d7f5d94d8c03907b946f7814e33ba357e4e42cce726e935035c9ee3a67f5c",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: zero-n-log-n-deploy-Epoch3_3-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(CostComputationFailed(\"Error evaluating result of cost function ST000000000000000000002AMW42H.costs-4.cost_from_consensus_buff: Arithmetic(\\\"log2 must be passed a positive integer\\\")\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 65,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10231,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 65,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10231,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "79f66684d2a068eef18553d25d775a7d7bcfd2bd54c28868b421cd300da44d66",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: zero-n-log-n-deploy-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(CostComputationFailed(\"Error evaluating result of cost function ST000000000000000000002AMW42H.costs-4.cost_from_consensus_buff: Arithmetic(\\\"log2 must be passed a positive integer\\\")\")) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 65,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 10231,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 65,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 10231,
    ),
  )),
]
