stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__runtime_tests__block_time_not_available.snap
---
source: stackslib/src/chainstate/tests/runtime_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "12cf5da4c45f4356d285ecfb1a3169c3e089f083d6f1a2e1a1eddf8faf91f44d",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: no-block-time-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "None [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: true,
          data: Bool(true),
        )),
        cost: ExecutionCost(
          write_length: 219,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 16360,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 219,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 16360,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "bab8c340960a286c42bed36352453e9d20691cbf44961ebfb9c2ba270ceddd29",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "ContractCall(address: ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP, contract_name: no-block-time-Epoch3_3-Clarity4, function_name: trigger, function_args: [[UInt(1)]])",
        vm_error: "Some(BlockTimeNotAvailable) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 201,
          read_count: 6,
          runtime: 9048,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 201,
      read_count: 6,
      runtime: 9048,
    ),
  )),
]
